<resources>
    <string name="app_name">W3 Demo</string>
    <string name="age_caption_ma1">Age</string>
    <string name="btn_caption_ma1">click</string>
    <string name="age_caption_hint_ma1">Enter age</string>
    <string name="age2_caption_hint_ma1">Enter a name</string>
    <string name="name_caption_ma1">Name:</string>
    <string name="show_map_caption_ma1">Show Map</string>
    <string name="addr_caption_ma1">Address</string>
    <string name="addr_caption_hint_ma1">Enter a Address</string>



    <string-array name="my_courses_items">
        <item>CSIT 551</item>
        <item>CSIT 551231</item>
        <item>CSIT 551231</item>
        <item>CSIT 511342251</item>
        <item>CSIT 5243251</item>
        <item>CSIT 55341</item>
        <item>CSIT 55221</item>
        <item>CSIT 5112351</item>
        <item>CSIT 552351</item>
        <item>CSIT 552341</item>
    </string-array>
</resources>
