<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.neotechdevs.jeffreyadamski.w3_res_intent_listview_demo.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_caption_ma1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/eText_map_ma1"
        android:hint="@string/age_caption_hint_ma1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_caption_ma1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/eText2_map_ma2"
        android:hint="@string/age2_caption_hint_ma1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addr_caption_hint_ma1" />

    <EditText
        android:id="@+id/edtxt3_age_ma1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addr_caption_hint_ma1"/>


    <Button
        android:id="@+id/btn1_ma1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_caption_ma1"/>

    <Button
        android:id="@+id/btn2_ma1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_map_caption_ma1"
        android:onClick="showMap"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView_ma1">
    </ListView>

</LinearLayout>
